--- a/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpConsoleProject.xpt.xml
+++ b/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpConsoleProject.xpt.xml
@@ -31,7 +31,7 @@
         <Reference type="Package" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <Reference type="Package" refto="System.Numerics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </References>
-      <Packages>
+      <Packages requireLicenseAcceptance="false">
         <Package Id="FSharp.Core" Version="4.1.0.2" local="true" /> 
       </Packages>
       <Files>
