--- a/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpNUnitLibraryProject.xpt.xml
+++ b/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpNUnitLibraryProject.xpt.xml
@@ -33,7 +33,7 @@
 				<Reference type="Package" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 			</References>
 
-			<Packages>
+			<Packages requireLicenseAcceptance="false">
 				<Package Id="FSharp.Core" Version="4.1.0.2" local="true" /> 
 				<Package id="NUnit" version="2.6.4" />
 			</Packages>
