--- a/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpTutorialProject.xpt.xml
+++ b/main/external/fsharpbinding/MonoDevelop.FSharpBinding/Templates/FSharpTutorialProject.xpt.xml
@@ -30,7 +30,7 @@
         <Reference type="Package" refto="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </References>
       
-      <Packages>
+      <Packages requireLicenseAcceptance="false">
         <Package Id="FSharp.Core" Version="4.1.0.2" local="true" /> 
         <Package Id="System.ValueTuple" Version="4.3.0" local="true" /> 
       </Packages>
